# cmake-test

lib-link-test/static/Foo/: CMakeLists.txt  Foo.cpp
lib-link-test/static/FooCli/FooCli/: CMakeLists.txt  main.cpp
lib-link-test/static/FooCli/FooCli/include/: Foo.h
